--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="dialog_message">EasyWaive is designed to facilitate the collection of Photo and Video Recording Release Forms. To get started, set your organization name that the forms will apply to. Select new form to begin filling out a new waiver. After the signer is finished, you can choose to share the most recently signed pdf document by selecting upload pdf. All documents can also be found in Documents/EasyWaive/ in this phone\'s storage, along with a list of all entered emails.</string>
     <string name="continue_button">Continue</string>
     <string name="thanks">Thank You!</string>
+    <string name="welcome">Welcome!</string>
+    <string name="set_org">Set your organization name</string>
+    <string name="input">Type your name and (optional) email address, then sign the pad and save</string>
 </resources>
