--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="settings">Settings</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="new_button">New Form</string>
-    <string name="view_forms">Change Org Name</string>
+    <string name="view_forms">Set Org Name</string>
     <string name="agree">I Agree</string>
     <string name="title">VIDEO and PHOTOGRAPH RELEASE FORM</string>
     <string name="org">Update</string>
@@ -20,6 +20,7 @@
     <string name="thanks">Thank You!</string>
     <string name="welcome">Welcome!</string>
     <string name="set_org">Set your organization name</string>
-    <string name="input">Type your name and (optional) email address, then sign the pad and save</string>
+    <string name="input">Type your name and email address, then sign the pad and save</string>
+    <string name="set_banner">Set your welcome message</string>
 
 </resources>
