--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="share">Upload Pdf</string>
     <string name="about">About</string>
     <string name="back">Back</string>
-    <string name="dialog_message">EasyWaive is designed to facilitate the collection of Photo and Video Recording Release Forms. To get started, set your organization name that the forms will apply to. Select new form to begin filling out a new waiver. After the signer is finished, you can choose to share the most recently signed pdf document by selecting upload pdf. All documents can also be found in Documents/EasyWaive/ in this phone\'s storage, along with a list of all entered emails. Use of this application requires a subscription, or you can try it out with a 1 week free trial.</string>
+    <string name="dialog_message">EasyWaive is designed to facilitate the collection of Photo and Video Recording Release Forms. To get started, set your organization name, email, and any other customizations you would like to make. Select new form to begin filling out a new waiver. After the signer is finished, an email will be sent to them, with your organization email as CC. All emails entered by signers will also be stored in a file which can be viewed or uploaded, along with all forms, via the buttons on the home screen. Use of this application requires a subscription, or you can try it out with a 1 week free trial.</string>
     <string name="continue_button">Finished</string>
     <string name="thanks">Thank You! A copy of your release form will be sent to the email you provided.</string>
     <string name="welcome">Welcome!</string>
