--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="back">Back</string>
     <string name="dialog_message">EasyWaive is designed to facilitate the collection of Photo and Video Recording Release Forms. To get started, set your organization name, email, and any other customizations you would like to make. Select new form to begin filling out a new waiver. After the signer is finished, an email will be sent to them, with your organization email as CC. All emails entered by signers will also be stored in a file which can be viewed or uploaded, along with all forms, via the buttons on the home screen. Use of this application requires a subscription, or you can try it out with a 1 week free trial.</string>
     <string name="continue_button">Finished</string>
-    <string name="thanks">Thank You! A copy of your release form will be sent to the email you provided.</string>
+    <string name="thanks">Thank You!</string>
     <string name="welcome">Welcome!</string>
     <string name="set_org">Set your organization name</string>
     <string name="input">Type your name and email address, then sign the pad and save</string>
@@ -27,5 +27,6 @@
     <string name="flag">Flag</string>
     <string name="default_bg">Default</string>
     <string name="preference_file_key">shared</string>
+    <string name="thanks_message"> A copy of your release form will be sent to the email you provided.</string>
 
 </resources>
