--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="thanks_message"> A copy of your release form will be sent to the email you provided.</string>
     <string name="set_welcome_message">Set Welcome Message</string>
     <string name="export_signer_info">Export Signer Info</string>
-    <string name="org_settings">Org. settings incomplete</string>
-    <string name="please_org_settings">Please set your Org. Name and Email before starting a new waiver</string>
+    <string name="org_settings">Organization settings incomplete</string>
+    <string name="please_org_settings">Please set your Organization Name and Email in the settings menu before starting a new waiver</string>
 
 </resources>
