--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="thanks">Thank You!</string>
     <string name="welcome">Welcome!</string>
     <string name="set_org">Set your organization name</string>
-    <string name="input">Type your name and email address, then sign the pad and save</string>
+    <string name="input">Type your name, phone, and email, then sign the pad and save</string>
     <string name="set_banner">Set your welcome message</string>
     <string name="set_email">Set Org. Email</string>
     <string name="set_background">Set Background</string>
