Added flag icon, no customization yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,7 @@
     <string name="export_signer_info">Export All Signer Info</string>
     <string name="org_settings">Organization settings incomplete</string>
     <string name="please_org_settings">Please set your Organization Name and Email in the settings menu before starting a new waiver</string>
+    <string name="view_waivers">View Signed Waivers</string>
+    <string name="export_waivers">Export All Waivers</string>
 
 </resources>
