New image picker, logo on home page, works with transparent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="please_org_settings">Please set your Organization Name and Email in the settings menu before starting a new waiver</string>
     <string name="view_waivers">View Signed Waivers</string>
     <string name="export_waivers">Export All Waivers</string>
+    <string name="set_logo">Set Logo</string>
 
 </resources>
